--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,29 +12,7 @@
     <a href="index.html"><img id="logoEco" src="" alt=""></a>
     <div class="container">
         <!-- Form Login -->
-        <form name="loginForm" action="index.html" method="post" id="login" class="form form-hidden" enctype="application/x-www-form-urlencoded" onsubmit="return logInValidation()">
-            <h1 class="form-title">LOG IN</h1>
-            <h3 class="form-slogan">Join EcoFarm for our better farm</h3>
-            <!-- <div class="form-message form-error"></div> -->
-            <div class="form-input-group">
-                <label for="fullname" class="form-label">Email</label>
-                <input required type="text" id="fullname" name="fullname" class="form-input" autofocus placeholder="Enter your username or email">
-                <div class="form-input-error-message"></div>
-            </div>
-            <div class="form-input-group">
-                <label for="psw" class="form-label">Password</label>
-                <input required type="password" id="psw" name="psw" class="form-input" autofocus placeholder="Password">
-                <div class="form-input-error-message"></div>
-            </div>
-            <button class="form-button" type="submit">Continue</button>
-            <p class="form-text">
-                <a href="#" class="form-link">Forgot your password?</a>
-            </p>
-            <p class="form-text">
-                <a href="#" class="form-link" id="linkCreateAccount">Don't have an account? Create account</a>
-            </p>
-        </form>
-        <form class="form" id="createAccount">
+        <form method="post" action="" class="form" id="createAccount">
             <h1 class="form-title">ĐĂNG KÝ</h1>
             <h3 class="form-slogan">Chào mừng bạn đến nhà hàng Anh Thư</h3>
             <div class="form-message form-error"></div>
