--- a/views/single_product.ejs
+++ b/views/single_product.ejs
@@ -106,7 +106,8 @@
 
                         <!-- Product Head Start -->
                         <div class="product-head m-b-15">
-                            <h2 class="product-title">Single product title</h2>
+                             
+                            <h2 class="product-title"><%=mainingredientdetails.food.name%></h2>
                         </div>
                         <!-- Product Head End -->
 
