--- a/views/header_section.ejs
+++ b/views/header_section.ejs
@@ -8,7 +8,7 @@
                     <!-- Header Logo Start -->
                     <div class="col-lg-3 col-md-4 col-6">
                         <div class="header-logo">
-                            <a href="index.html"><img src="images/logo/logo.png" alt="Site Logo" /></a>
+                            <a href="index.html"><img src="/images/logo/logo.png" alt="Site Logo" /></a>
                         </div>
                     </div>
                     <!-- Header Logo End -->
