--- a/views/single_product.ejs
+++ b/views/single_product.ejs
@@ -106,7 +106,9 @@
                         </div>
                         <!-- SKU End -->
                         <!-- Description Start -->
-                        <p class="desc-content m-b-25"><%=mainingredientdetails.mainingredients.name%></p>
+                      
+                            <p class="desc-content m-b-25"></p>
+                        
                         <!-- Description End -->
 
                         <!-- Quantity Start -->
