--- a/views/register.ejs
+++ b/views/register.ejs
@@ -33,12 +33,12 @@
             </div>
             <div class="form-input-group">
                 <label for="signupPassword" class="form-label">Mật khẩu</label>
-                <input required type="password" name="password" id="signupPassword" class="form-input" autofocus placeholder="Vui lòng nhập mật khẩu của bạn">
+                <input required type="password" name="password" id="signupPassword" class="form-input" autofocus placeholder="Vui lòng nhập mật khẩu của bạn"  pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*]).{8,}$">
                 <div class="form-input-error-message"></div>
             </div>
             <div class="form-input-group">
                 <label for="signupPassword2" class="form-label">Nhập lại mật khẩu</label>
-                <input required type="password" name="repassword" class="form-input" autofocus placeholder="Vui lòng nhập lại mật khẩu của bạn">
+                <input required type="password" name="repassword" class="form-input" autofocus placeholder="Vui lòng nhập lại mật khẩu của bạn" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*]).{8,}$">
                 <div class="form-input-error-message"></div>
             </div>
             <button class="form-button" type="submit">Tiếp tục</button>
