--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,15 +1,15 @@
 <footer id="footer" class="footer container-fluid">
     <h5 style="font-size: 20px; color: #ec455a;">About me</h5>
-    <img class="footer__avatar" src="image/avatar.jpg">
+    <img class="footer__avatar" src="/images/footer/avatar.jpg">
     <div class="footer__info">
       <div>Nguyễn Thị Anh Thư - B1908364
         <br>
         Niên luận ngành - CT439 Nhóm 06
       </div>
       <ul class="footer__info__social">
-        <li><a href="https://www.facebook.com/anhthutralongne" target="_blank"><img src="image/icon-facebook.svg" alt="Facebook icon"></a></li>
-        <li><a href="https://github.com/ThuNguyen3108" target="_blank"><img src="image/icon-github.svg"alt="Github icon"></a></li>
-        <li><a href="https://www.linkedin.com/in/nguy%E1%BB%85n-th%E1%BB%8B-anh-th%C6%B0-8b452b20a/" target="_blank"><img src="image/icon-linked.svg" alt="Linked icon"></a></li>
+        <li><a href="https://www.facebook.com/anhthutralongne" target="_blank"><img src="/images/footer/icon-facebook.svg" alt="Facebook icon"></a></li>
+        <li><a href="https://github.com/ThuNguyen3108" target="_blank"><img src="/images/footer/icon-github.svg"alt="Github icon"></a></li>
+        <li><a href="https://www.linkedin.com/in/nguy%E1%BB%85n-th%E1%BB%8B-anh-th%C6%B0-8b452b20a/" target="_blank"><img src="/images/footer/icon-linked.svg" alt="Linked icon"></a></li>
       </ul>
       <div class="footer__copyright">
         Copyright © 2022 Nguyễn Thị Anh Thư
