--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,6 +13,7 @@
 <link rel="stylesheet" href="/css/vendor/bootstrap.min.css" />
 <link rel="stylesheet" href="/css/vendor/simple-line-icons.min.css" />
 <link rel="stylesheet" href="/css/vendor/themify-icons-min.css" /> 
+<link rel="stylesheet" href="/css/vendor/footer.css" /> 
 
 
     <!-- Plugins CSS (All Plugins Files) -->
