--- a/views/header_section.ejs
+++ b/views/header_section.ejs
@@ -8,7 +8,7 @@
                     <!-- Header Logo Start -->
                     <div class="col-lg-3 col-md-4 col-6">
                         <div class="header-logo">
-                            <a href="index.html"><img src="/images/logo/logo.png" alt="Site Logo" /></a>
+                            <a href="/"><img src="/images/logo/logo.png" alt="Site Logo" /></a>
                         </div>
                     </div>
                     <!-- Header Logo End -->
@@ -18,10 +18,10 @@
                         <div class="main-menu">
                             <ul>
                                 <li class="has-children">
-                                    <a href="index-3.html">Trang chủ</a>
+                                    <a href="">Trang chủ</a>
                                 </li>
                                 <li class="has-children position-static">
-                                    <a href="#">Nhà hàng</a>
+                                    <a href="">Nhà hàng</a>
                                     <ul class="mega-menu">
                                         <li class="mega-menu-col">
                                             <ul class="m-b-n10">
