--- a/views/restaurants.ejs
+++ b/views/restaurants.ejs
@@ -110,6 +110,7 @@
     <!-- Shop Section End -->
 
     <!-- Footer Section Start -->
+    <%- include('footer.ejs') -%>
   
     <!-- Footer Section End -->
 
