--- a/views/single_product.ejs
+++ b/views/single_product.ejs
@@ -309,7 +309,7 @@
     <!-- Single Product Tab End -->
 
     <!-- Product Section Start -->
-    
+    <%- include('footer.ejs') -%>
 
     <!-- Modal Start  -->
     <div class="modalquickview modal fade" id="quick-view" tabindex="-1" aria-labelledby="quick-view" role="dialog" aria-hidden="true">
