--- a/views/header_section.ejs
+++ b/views/header_section.ejs
@@ -18,7 +18,7 @@
                         <div class="main-menu">
                             <ul>
                                 <li class="has-children">
-                                    <a href="">Trang chủ</a>
+                                    <a href="/">Trang chủ</a>
                                 </li>
                                 <li class="has-children position-static">
                                     <a href="">Nhà hàng</a>
