--- a/views/header_section.ejs
+++ b/views/header_section.ejs
@@ -95,7 +95,7 @@
                             <!-- Header Action Search Button End -->
 
                             <!-- Header My Account Button Start -->
-                            <a href="my-account.html" class="header-action-btn header-action-btn-wishlist">
+                            <a href="/login" class="header-action-btn header-action-btn-wishlist">
                                 <i class="icon-user icons"></i>
                             </a>
                             <!-- Header My Account Button End -->
