--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,11 +39,9 @@
                 <a href="#" class="form-link">Bạn quên mật khẩu của bạn?</a>
             </p>
             <p class="form-text">
-                <a href="#" class="form-link" id="linkCreateAccount">Bạn chưa có tài khoản? Tạo tài khoản </a>
+                <a href="/register" class="form-link" id="linkCreateAccount">Bạn chưa có tài khoản? Tạo tài khoản </a>
             </p>
         </form>
     </div>
-
-    <script src="js/login.js"></script>
 </body>
 </html>
