--- a/views/register.ejs
+++ b/views/register.ejs
@@ -18,12 +18,12 @@
             <div class="form-message form-error"></div>
             <div class="form-input-group">
                 <label for="name" class="form-label" name="username">Tên</label>
-                <input required type="text" name="name" id="signupUsername" class="form-input" autofocus placeholder="Vui lòng nhập tên của bạn">
+                <input required type="text" name="name" id="signupUsername" class="form-input" autofocus placeholder="Vui lòng nhập tên của bạn" pattern="^[a-zA-Z0-9_]{5,}$">
                 <div class="form-input-error-message"></div>
             </div>
             <div class="form-input-group">
                 <label for="name" class="form-label" name="username">Tên tài khoản</label>
-                <input required type="text" name="username" id="signupUsername" class="form-input" autofocus placeholder="Vui lòng nhập tên tài khoản">
+                <input required type="text" name="username" id="signupUsername" class="form-input" autofocus placeholder="Vui lòng nhập tên tài khoản" pattern="^[a-zA-Z0-9_]{5,}$">
                 <div class="form-input-error-message"></div>
             </div>
             <div class="form-input-group">
