--- a/views/manager/addParty.ejs
+++ b/views/manager/addParty.ejs
@@ -6,26 +6,26 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--favicon-->
-	<link rel="icon" href="assets/images/favicon-32x32.png" type="image/png" />
+	<link rel="icon" href="/assets/images/favicon-32x32.png" type="image/png" />
 	<!--plugins-->
-	<link href="assets/plugins/Drag-And-Drop/dist/imageuploadify.min.css" rel="stylesheet" />
-	<link href="assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
-	<link href="assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
-	<link href="assets/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
+	<link href="/assets/plugins/Drag-And-Drop/dist/imageuploadify.min.css" rel="stylesheet" />
+	<link href="/assets/plugins/simplebar/css/simplebar.css" rel="stylesheet" />
+	<link href="/assets/plugins/perfect-scrollbar/css/perfect-scrollbar.css" rel="stylesheet" />
+	<link href="/assets/plugins/metismenu/css/metisMenu.min.css" rel="stylesheet" />
 	<!-- loader-->
-	<link href="assets/css/pace.min.css" rel="stylesheet" />
+	<link href="/assets/css/pace.min.css" rel="stylesheet" />
 	<script src="assets/js/pace.min.js"></script>
 	<!-- Bootstrap CSS -->
-	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-	<link href="assets/css/bootstrap-extended.css" rel="stylesheet">
+	<link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+	<link href="/assets/css/bootstrap-extended.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-	<link href="assets/css/app.css" rel="stylesheet">
-	<link href="assets/css/icons.css" rel="stylesheet">
+	<link href="/assets/css/app.css" rel="stylesheet">
+	<link href="/assets/css/icons.css" rel="stylesheet">
 	<!-- Theme Style CSS -->
-	<link rel="stylesheet" href="assets/css/dark-theme.css" />
-	<link rel="stylesheet" href="assets/css/semi-dark.css" />
-	<link rel="stylesheet" href="assets/css/header-colors.css" />
-	<title>Synadmin – Bootstrap5 Admin Template</title>
+	<link rel="stylesheet" href="/assets/css/dark-theme.css" />
+	<link rel="stylesheet" href="/assets/css/semi-dark.css" />
+	<link rel="stylesheet" href="/assets/css/header-colors.css" />
+	<title>ADD PARTY</title>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
 		<div class="sidebar-wrapper" data-simplebar="true">
 			<div class="sidebar-header">
 				<div>
-					<img src="assets/images/logo-icon.png" class="logo-icon" alt="logo icon">
+					<img src="/assets/images/logo-icon.png" class="logo-icon" alt="logo icon">
 				</div>
 				<div>
 					<h4 class="logo-text">Synadmin</h4>
@@ -252,10 +252,10 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-1.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-1.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
-													<h6 class="msg-name">Daisy Anderson <span class="msg-time float-end">5 sec
+													<h6 class="msg-name">Daisy Anders <span class="msg-time float-end">5 sec
 												ago</span></h6>
 													<p class="msg-info">The standard chunk of lorem</p>
 												</div>
@@ -264,7 +264,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-2.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-2.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">Althea Cabardo <span class="msg-time float-end">14
@@ -276,7 +276,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-3.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-3.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">Oscar Garner <span class="msg-time float-end">8 min
@@ -288,7 +288,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-4.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-4.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">Katherine Pechon <span class="msg-time float-end">15
@@ -312,7 +312,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-6.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-6.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">Cristina Jhons <span class="msg-time float-end">2 hrs
@@ -324,7 +324,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-7.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-7.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">James Caviness <span class="msg-time float-end">4 hrs
@@ -336,7 +336,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-8.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-8.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">Peter Costanzo <span class="msg-time float-end">6 hrs
@@ -348,7 +348,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-9.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-9.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">David Buckley <span class="msg-time float-end">2 hrs
@@ -360,7 +360,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-10.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-10.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">Thomas Wheeler <span class="msg-time float-end">2 days
@@ -372,7 +372,7 @@
 										<a class="dropdown-item" href="javascript:;">
 											<div class="d-flex align-items-center">
 												<div class="user-online">
-													<img src="assets/images/avatars/avatar-11.png" class="msg-avatar" alt="user avatar">
+													<img src="/assets/images/avatars/avatar-11.png" class="msg-avatar" alt="user avatar">
 												</div>
 												<div class="flex-grow-1">
 													<h6 class="msg-name">Johnny Seitz <span class="msg-time float-end">5 days
@@ -391,7 +391,7 @@
 					</div>
 					<div class="user-box dropdown">
 						<a class="d-flex align-items-center nav-link dropdown-toggle dropdown-toggle-nocaret" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-							<img src="assets/images/avatars/avatar_2.jpg" class="user-img" alt="user avatar">
+							<img src="/assets/images/avatars/avatar_2.jpg" class="user-img" alt="user avatar">
 							<div class="user-info ps-3">
 								<p class="user-name mb-0">Anh Thư</p>
 								<p class="designattion mb-0">Web Designer</p>
@@ -431,7 +431,7 @@
 							<ol class="breadcrumb mb-0 p-0">
 								<li class="breadcrumb-item"><a href="javascript:;"><i class="bx bx-home-alt"></i></a>
 								</li>
-								<li class="breadcrumb-item active" aria-current="page">Chỉnh sửa nguyên liệu</li>
+								<li class="breadcrumb-item active" aria-current="page">Thêm món ăn</li>
 							</ol>
 						</nav>
 					</div>
@@ -452,24 +452,63 @@
 
               <div class="card">
 				  <div class="card-body p-4">
-					  <h5 class="card-title">Chỉnh sửa nguyên liệu</h5>
+					  <h5 class="card-title">Thêm món ăn</h5>
 					  <hr/>
                        <div class="form-body mt-4">
 					    <div class="row">
-						   <div class="col-lg-12">
+						   <div class="col-lg-8">
                            <div class="border border-3 p-4 rounded">
 							<div class="mb-3">
 								<label for="inputProductTitle" class="form-label">Tên món ăn</label>
 								<input type="email" class="form-control" id="inputProductTitle" placeholder="Enter product title">
 							  </div>
-                              <div class="d-grid">
-                                <button type="button" class="btn btn-primary">Lưu</button>
-                             </div>
+							  <div class="mb-3">
+								<label for="inputProductDescription" class="form-label">Mô tả</label>
+								<textarea class="form-control" id="inputProductDescription" rows="3"></textarea>
+							  </div>
+							  <div class="mb-3">
+								<label for="inputProductDescription" class="form-label">Hình ảnh</label>
+								<input id="image-uploadify" type="file" accept=".xlsx,.xls,image/*,.doc,audio/*,.docx,video/*,.ppt,.pptx,.txt,.pdf" multiple>
+							  </div>
                             </div>
 						   </div>
-						   <!-- <div class="col-lg-4">
+						   <div class="col-lg-4">
 							<div class="border border-3 p-4 rounded">
                               <div class="row g-3">
+								<div class="col-md-6">
+									<label for="inputPrice" class="form-label">Giá</label>
+									<input type="email" class="form-control" id="inputPrice" placeholder="00.00">
+								  </div>
+								  <!-- <div class="col-md-6">
+									<label for="inputCompareatprice" class="form-label">Compare at Price</label>
+									<input type="password" class="form-control" id="inputCompareatprice" placeholder="00.00">
+								  </div> -->
+								  <!-- <div class="col-md-6">
+									<label for="inputCostPerPrice" class="form-label">Cost Per Price</label>
+									<input type="email" class="form-control" id="inputCostPerPrice" placeholder="00.00">
+								  </div> -->
+								  <!-- <div class="col-md-6">
+									<label for="inputStarPoints" class="form-label">Star Points</label>
+									<input type="password" class="form-control" id="inputStarPoints" placeholder="00.00">
+								  </div> -->
+								  <div class="col-12">
+									<label for="inputProductType" class="form-label">Loại món ăn</label>
+									<select class="form-select" id="inputProductType">
+										<option></option>
+										<option value="1">One</option>
+										<option value="2">Two</option>
+										<option value="3">Three</option>
+									  </select>
+								  </div>
+								  <!-- <div class="col-12">
+									<label for="inputVendor" class="form-label">Vendor</label>
+									<select class="form-select" id="inputVendor">
+										<option></option>
+										<option value="1">One</option>
+										<option value="2">Two</option>
+										<option value="3">Three</option>
+									  </select>
+								  </div> -->
 								  <div class="col-12">
 									  <div class="d-grid">
                                          <button type="button" class="btn btn-primary">Lưu</button>
@@ -477,7 +516,7 @@
 								  </div>
 							  </div> 
 						  </div>
-						  </div> -->
+						  </div>
 					   </div><!--end row-->
 					</div>
 				  </div>
@@ -593,20 +632,20 @@
 	</div>
 	<!--end switcher-->
 	<!-- Bootstrap JS -->
-	<script src="assets/js/bootstrap.bundle.min.js"></script>
+	<script src="/assets/js/bootstrap.bundle.min.js"></script>
 	<!--plugins-->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/plugins/simplebar/js/simplebar.min.js"></script>
-	<script src="assets/plugins/metismenu/js/metisMenu.min.js"></script>
-	<script src="assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
-	<script src="assets/plugins/Drag-And-Drop/dist/imageuploadify.min.js"></script>
+	<script src="/assets/js/jquery.min.js"></script>
+	<script src="/assets/plugins/simplebar/js/simplebar.min.js"></script>
+	<script src="/assets/plugins/metismenu/js/metisMenu.min.js"></script>
+	<script src="/assets/plugins/perfect-scrollbar/js/perfect-scrollbar.js"></script>
+	<script src="/assets/plugins/Drag-And-Drop/dist/imageuploadify.min.js"></script>
 	<script>
 		$(document).ready(function () {
 			$('#image-uploadify').imageuploadify();
 		})
 	</script>
 	<!--app JS-->
-	<script src="assets/js/app.js"></script>
+	<script src="/assets/js/app.js"></script>
 </body>
 
 </html>
